- Fixed bug where the game would crash if an enemy put a type of ankle cuffs on you
- New barred prisons
- Fixed unreal number of jailers
- Changed saving. No more punishment
- Fixed so numpad is treated as buttons
- Keybindings are now saved to the browser
- Periodic guard checkups in jail

2.33
- Fixed the infinite tickle ghost
- Fixed shop crash
- Removed exit button for standalone version



TODO Character customizer, change outfit and/or the player character's appearance, either have it save or make it use a code to load

TODO ValidationFindBlockCycles to prevent bugs

Enemy ideas:
-Silent sentinel, triggers ambush when the player casts a verbal spell, tries to gag the player

Future content planned:
- Wand item which reduces mana costs but is terrible for melee
- Witches should drop their respective spells sometimes if you don't already have them
- Slimes which clean up items, dissolve doors, and potentially corrupt traps and such
- Slimes that catch your sword and trap it
- Enemies that grab your melee weapon and disarm you
- Perk system with perks that allow you to decrease or increase spawns of certain restraints, affect your stats, etc.
	- One Punch: Melee based perk that drastically increases melee damage but drastically reduces your ability to cast magic
- Exit stair puzzles (like for example a button or special key somewhere in the level, maybe with a high likelihood of traps)
- Inescapable yoke that needs keys, but the trap also summons rats that steal the keys and run away
	- Trapdoor (?) that drops you into the above bonus level, with no enemies other than the rats. You wake up feeling stiff, and a yoke is on your arms...
- Rats should have a kleptomaniac AI that steals items and holds them, drops them on death, and runs away from the player when confronted
- jail bars that block movement but not vision and spells
- Tranquilizer/stamina drain from an enemy (bandits? raiders?)
- Boss rooms every few floors